ingress-resource.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.khs-lab
    http:
      paths:
      - path: /watch
        pathType: Exact
        backend:
          service:
            name: web-service
            port:
              number: 80
      - path: /wear
        pathType: Exact
        backend:
          service:
            name: web-service
            port:
              number: 80
      - path: /html
        pathType: Exact
        backend:
          service:
            name: web-service
            port:
              number: 80
